# router/auth/auth.go
@@ -8,6 +8,7 @@ import (
 )
 
 func SetupRoutes(router fiber.Router) {
+    router.Post("/o/token-http", auth.LoginHttp)
     router.Post("/o/token", auth.Login)
     router.Post("/o/refresh-token", middleware.JWTProtected, auth.Refresh)
     router.Get("/api/current-user", middleware.JWTProtected, auth.UserDetails)
